--- a/arduino-code/platformio.ini
+++ b/arduino-code/platformio.ini
@@ -12,4 +12,8 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-monitor_speed = 74880
+monitor_speed = 115200
+monitor_filters = 
+    send_on_enter
+    time
+monitor_echo = true
